IFS-8965 fixed align.

--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_modifiers.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_modifiers.scss
@@ -1,8 +1,8 @@
-table {
+.vertical-align-top {
+  vertical-align: top !important;
+}
 
-  .cell-align-top {
-    vertical-align: top;
-  }
+table {
 
   .cell-nowrap {
     white-space: nowrap;
